tinyc/test/bad/false-redeclare-fun.c
void false();
int main()
{
    return 0;
}
